load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    tsconfig = "tsconfig.json",
    deps = [
        "//libs/config:config_lib",
        "//libs/schema",
        "@npm//@types/faker",
        "@npm//@types/node",
        "@npm//@types/uuid",
        "@npm//base64-arraybuffer",
        "@npm//faker",
        "@npm//rxjs",
        "@npm//socket.io",
        "@npm//uuid",
    ],
)

nodejs_image(
    name = "image",
    data = [":lib"],
    entry_point = "index.ts",
)

k8s_deploy(
    name = "kubernetes",
    images = {"server:placeholder_name": ":image"},
    template = ":server.yaml",
)
