load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    tsconfig = "tsconfig",
    deps = [
        "//libs/config:config_lib",
        "//libs/schema",
        "@npm//@types/faker",
        "@npm//@types/node",
        "@npm//@types/uuid",
        "@npm//@types/ws",
        "@npm//faker",
        "@npm//rxjs",
        "@npm//uuid",
        "@npm//ws",
    ],
)

nodejs_image(
    name = "image",
    data = ["lib"],
    entry_point = "index.ts",
)

k8s_deploy(
    name = "kubernetes",
    images = {"server:placeholder_name": "image"},
    template = "server.yaml",
)
