load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/concatjs:index.bzl", "karma_web_test_suite")

package(default_visibility = ["//angular-client:__subpackages__"])

sass_binary(
    name = "styles",
    src = "home.component.sass",
)

ng_ts_library(
    name = "home",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    angular_assets = ["styles"],
    tsconfig = "//angular-client:tsconfig",
    deps = [
        "//angular-client/shared",
        "//angular-client/store",
        "//libraries/ui-elements",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
    ],
)

ts_library(
    name = "test_lib",
    srcs = glob(["*.spec.ts"]),
    tsconfig = "//angular-client:tsconfig_test",
    deps = [
        "home",
        "//angular-client/environment",
        "//angular-client/shared",
        "//libraries/ui-elements",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//@types/jasmine",
    ],
)

karma_web_test_suite(
    name = "test",
    bootstrap = [
        "@npm//:node_modules/zone.js/dist/zone-testing-bundle.js",
        "@npm//:node_modules/reflect-metadata/Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    tags = ["native"],
    runtime_deps = ["//angular-client:initialize_testbed"],
    deps = [
        "test_lib",
        "//tools:rxjs_umd_modules",
        "@npm//:node_modules/tslib/tslib.js",
    ],
)
