load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//angular-client:__subpackages__"])

ng_ts_library(
    name = "router",
    srcs = glob(["*.ts"]),
    tsconfig = "//angular-client:tsconfig.json",
    deps = [
        "@npm//@angular/router",
        "@npm//@ngrx/router-store",
        "@npm//@ngrx/store",
    ],
)
