load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

ng_ts_library(
    name = "shared",
    srcs = glob(["**/*.ts"]),
    module_name = "@client/shared",
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "//services/client/environment",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)
